Update memo in the other split if requested

BUG:249844
FIXED-IN:5.0
(cherry picked from commit 398304bcf331a322a0fe7e475775aea887c4b565)

and adapted to work on Qt4.8

Signed-off-by: Thomas Baumgart <thb@net-bembel.de>